apps/mimir-alertmanager-graph-redirect/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mimir-alertmanager-graph-redirect
