apps/mimir-alertmanager-graph-redirect/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mimir-alertmanager-graph-redirect
  labels:
    app.kubernetes.io/name: mimir-alertmanager-graph-redirect
spec:
  selector:
    app.kubernetes.io/name: mimir-alertmanager-graph-redirect
  ports:
    - name: http
      port: 80
      targetPort: http
