apps/mimir-alertmanager-graph-redirect/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mimir-alertmanager-graph-redirect
spec:
  parentRefs:
    - name: default-https-gateway
      namespace: istio-system
      group: gateway.networking.k8s.io
      kind: Gateway
  hostnames:
    - mimir-redirect.home.alden.ai
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: mimir-alertmanager-graph-redirect
          port: 80
          group: ''
          kind: Service
          weight: 1
